--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 !<!DOCTYPE html>
 <html>
-
-<header>
-  
-</header>
-</html>
+<head>
+  <title>portfolio website</title>
+  <script src="https://use.fontawesome.com/ab1ceb66af.js"></script>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/gridlex/2.4.0/gridlex.min.css">
+  <link rel="stylesheet" href=".git/style.css" />
+</head>
