--- a/index.html
+++ b/index.html
@@ -6,3 +6,19 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/gridlex/2.4.0/gridlex.min.css">
   <link rel="stylesheet" href=".git/style.css" />
 </head>
+<body>
+<header>
+  <nav class="grid-spaceBetween">
+    <div class="col-4">
+      <a href="#home">Home</a>
+      <a href="about">About</a>
+    </div>
+    <h2 class=col-4>Blah</h2>
+    <div class="col-4">
+      <a href="#contact">Contact</a>
+      <a href="#blog">Blog</a>
+    </div>
+  </nav>
+</header>
+
+</body>
