home page update

--- a/index.html
+++ b/index.html
@@ -20,5 +20,68 @@
     </div>
   </nav>
 </header>
-
+<section class="banner">
+  <h1>blah</h1>
+<a href="#"><i class="fa fa-hand-peace-o" aria-hidden="true"></i></a>
+</section>
+<img src="" alt="fancy line" />
+<section class="about">
+<h2>blah</h2>
+<p>
+  blah
+</p>
+<a href="#"><i class="fa fa-hand-peace-o" aria-hidden="true"></i></a>
+</section>
+<section class="subscribe">
+</section>
+<section class="grid-spaceBetween">
+<div class="col-4">
+  <h2>Blah</h2>
+  <h3>Travel<a href="#travel">Travel</a></h3>
+  </div>
+  <div class="col-4">
+    <h2>Blah</h2>
+    <h3>food<a href="#food">Travel</a></h3>
+    </div>
+    <div class="col-4">
+      <h2>Blah</h2>
+      <h3>other<a href="#other">Other</a></h3>
+      </div>
+      <a href="#"><i class="fa fa-hand-peace-o" aria-hidden="true"></i></a>
+</section>
+<img src="" alt="fancy line" />
+<section class="quotes">
+<img src="" alt="fancy line" />
+<h3>some sort of quote</h3>
+<img src="" alt="fancy line" />
+<h3>more<a href="#quotes"</a>quotes page</h3>
+</section>
+<img src="" alt="fancy line" />
+<section class="contact">
+  <div class="grid">
+    <div class="col-4">
+      <h2>get in touch</h2>
+      <p>
+        reason for why they should get in touch
+      </p>
+      <div class="col-8">
+        <form action ="https://formspree.io/your@email.com"
+      method="POST">
+        <input type="text" name="name" placeholder="Your name">
+        <input type="email" name="_replyto" placeholder="Your email">
+         <textarea name="message" placeholder="Your message"></textarea>
+        <input type="submit" value="Send">
+      </form>
+      </div>
+    </div>
+  </div>
+</section>
+<footer>
+  <nav>
+    <a href="http://facebook.com/beguma88">facebook</a>
+        <a href="http://instagram.com/amzbe88/?hl=en">instagram</a>
+        <a href="http://linkedin.com/in/beguma">Linkedin</a>
+        <a href="http://pinterest.co.uk/amzb/">Pinterest</a>
+  </nav>
+</footer>
 </body>
