--- a/index.html
+++ b/index.html
@@ -1,87 +1,99 @@
-!<!DOCTYPE html>
+<!DOCTYPE html>
 <html>
 <head>
+  <!-- META DATA -->
   <title>portfolio website</title>
-  <script src="https://use.fontawesome.com/ab1ceb66af.js"></script>
+  <!--STYLE SHEETS-->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/gridlex/2.4.0/gridlex.min.css">
-  <link rel="stylesheet" href=".git/style.css" />
+  <link rel="stylesheet" href="style.css" />
+  <!--Scripts-->
+    <script src="https://use.fontawesome.com/ab1ceb66af.js"></script>
 </head>
 <body>
-<header>
-  <nav class="grid-spaceBetween">
-    <div class="col-4">
-      <a href="#home">Home</a>
-      <a href="about">About</a>
-    </div>
-    <h2 class=col-4>Blah</h2>
-    <div class="col-4">
-      <a href="#contact">Contact</a>
-      <a href="#blog">Blog</a>
-    </div>
-  </nav>
-</header>
-<section class="banner">
-  <h1>blah</h1>
-<a href="#"><i class="fa fa-hand-peace-o" aria-hidden="true"></i></a>
-</section>
-<img src="" alt="fancy line" />
-<section class="about">
-<h2>blah</h2>
-<p>
-  blah
-</p>
-<a href="#"><i class="fa fa-hand-peace-o" aria-hidden="true"></i></a>
-</section>
-<section class="subscribe">
-</section>
-<section class="grid-spaceBetween">
-<div class="col-4">
-  <h2>Blah</h2>
-  <h3>Travel<a href="#travel">Travel</a></h3>
-  </div>
-  <div class="col-4">
-    <h2>Blah</h2>
-    <h3>food<a href="#food">Travel</a></h3>
-    </div>
-    <div class="col-4">
-      <h2>Blah</h2>
-      <h3>other<a href="#other">Other</a></h3>
-      </div>
+  <header>
+    <nav class="grid-spaceBetween">
+        <a class="col-2" href="#home">Home</a>
+        <a class="col-2" href="about">About</a>
+        <h2 class="col-2">Blah</h2>
+        <a class="col-2" href="#contact">Contact</a>
+        <a class="col-2" href="#blog">Blog</a>
+    </nav>
+    <!-- add search abaility within site here-->
+  </header>
+<!--end of header-->
+<!-- banner section -->
+  <section class="grid-center banner">
+    <div class="col-6 centerText">
+      <h1>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</h1>
       <a href="#"><i class="fa fa-hand-peace-o" aria-hidden="true"></i></a>
-</section>
-<img src="" alt="fancy line" />
-<section class="quotes">
-<img src="" alt="fancy line" />
-<h3>some sort of quote</h3>
-<img src="" alt="fancy line" />
-<h3>more<a href="#quotes"</a>quotes page</h3>
-</section>
-<img src="" alt="fancy line" />
-<section class="contact">
-  <div class="grid">
-    <div class="col-4">
-      <h2>get in touch</h2>
-      <p>
-        reason for why they should get in touch
-      </p>
-      <div class="col-8">
-        <form action ="https://formspree.io/your@email.com"
-      method="POST">
-        <input type="text" name="name" placeholder="Your name">
-        <input type="email" name="_replyto" placeholder="Your email">
-         <textarea name="message" placeholder="Your message"></textarea>
-        <input type="submit" value="Send">
-      </form>
-      </div>
     </div>
-  </div>
-</section>
-<footer>
-  <nav>
-    <a href="http://facebook.com/beguma88">facebook</a>
-        <a href="http://instagram.com/amzbe88/?hl=en">instagram</a>
-        <a href="http://linkedin.com/in/beguma">Linkedin</a>
-        <a href="http://pinterest.co.uk/amzb/">Pinterest</a>
-  </nav>
-</footer>
+  </section>
+  <!--end of banner section -->
+  <img src="" alt="fancy line" />#
+  <!-- start of about section -->
+  <section class="about">
+    <h2>section title</h2>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+    <a href="#"><i class="fa fa-hand-peace-o" aria-hidden="true"></i></a>
+  </section>
+  <!-- end of about section -->
+  <section class="subscribe">
+    <!--This will be a pop up subscribe form-->
+  </section>
+  <!-- section with images that link to pages -->
+  <section class="pages grid-spaceBetween">
+    <div class="col-3 centerText">
+      <h2>section title</h2>
+      <h3><a href="#travel">Travel</a></h3>
+    </div>
+    <div class="col-3 centerText">
+      <h2>section title</h2>
+      <h3><a href="#food">Food</a></h3>
+    </div>
+    <div class="col-3 centerText">
+      <h2>section title</h2>
+      <h3><a href="#other">Other</a></h3>
+    </div>
+    <div class="centerText">
+      <a href="#"><i class="fa fa-hand-peace-o" aria-hidden="true"></i></a>
+    </div>
+  </section>
+  <!--End of images section -->
+  <img src="" alt="fancy line" />
+  <!-- section with quote -->
+  <section class="grid-center quotes">
+    <div class="col-6 thequote">
+      <img src="" alt="fancy line" />
+      <h3>some sort of quote</h3>
+      <img src="" alt="fancy line" />
+      <h3><a href="#quotes">more quotes page</a></h3>
+    </div>
+  </section>
+  <img src="" alt="fancy line" />
+  <!-- contact section -->
+  <section class="contact">
+    <div class="grid">
+      <div class="col-4">
+        <h2>get in touch</h2>
+        <p>reason for why they should get in touch</p>
+      </div>
+        <div class="col-8">
+          <form class="grid" action ="https://formspree.io/your@email.com"method="POST">
+            <input class="col-8" type="text" name="name" placeholder="Your name">
+            <input class="col-8" type="email" name="_replyto" placeholder="Your email">
+            <textarea class="col-8" name="message" placeholder="Your message"></textarea>
+            <input class="col-8" type="submit" value="Send">
+          </form>
+        </div>
+      </div>
+  </section>
+  <footer>
+    <nav>
+      <a href="http://facebook.com/beguma88"><i class="fa fa-facebook" aria-hidden="true"></i></a>
+      <a href="http://instagram.com/amzbe88/?hl=en"><i class="fa fa-instagram" aria-hidden="true"></i></a>
+      <a href="http://linkedin.com/in/beguma"><i class="fa fa-linkedin" aria-hidden="true"></i></a>
+      <a href="http://pinterest.co.uk/amzb/"><i class="fa fa-pinterest" aria-hidden="true"></i></a>
+    </nav>
+  </footer>
 </body>
+</html>
