--- a/about.html
+++ b/about.html
@@ -1,3 +1,18 @@
 ---
 layout: default
+title: About
 ---
+<section class="grid">
+  <div class="col-7">
+    <h2>{{page.subtitle}}</h2>
+    <p>
+      Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+    </p>
+  </div>
+  <div class="col-3">
+    <img src="https://unsplash.it/600/300/?random" alt="My hover"/>
+  </div>
+</section>
+
+{% include fancyline.html %}
+<!-- LightWidget WIDGET --><script src="//lightwidget.com/widgets/lightwidget.js"></script><iframe src="//lightwidget.com/widgets/cc1b9a5f430f50c08a1e3fc75275e1fd.html" scrolling="no" allowtransparency="true" class="lightwidget-widget" style="width: 100%; border: 0; overflow: hidden;"></iframe>
