--- a/index.html
+++ b/index.html
@@ -1,63 +1,64 @@
 ---
 layout: default
+title: Homepage
 ---
-  <!-- start of about section -->
-  <section class="about">
+<!-- start of about section -->
+<section class="about">
+  <h2>section title</h2>
+  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+  <a href="#"><i class="fa fa-hand-peace-o" aria-hidden="true"></i></a>
+</section>
+<!-- end of about section -->
+<section class="subscribe">
+<!--This will be a pop up subscribe form-->
+</section>
+<!-- section with images that link to pages -->
+<section class="pages grid-spaceBetween">
+  {% for post in site.posts %}
+  <div class="col-3 centerText">
+    <div class="blogpic" style="background-image:url('{{post.pagepic}}')"> </div>
+    <h2>{{post.title}}</h2>
+    <h3><a href="#travel">Travel</a></h3>
+  </div>
+  {% endfor %}
+  <div class="col-3 centerText">
     <h2>section title</h2>
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+    <h3><a href="#food">Food</a></h3>
+  </div>
+  <div class="col-3 centerText">
+    <h2>section title</h2>
+    <h3><a href="#other">Other</a></h3>
+  </div>
+  <div class="centerText">
     <a href="#"><i class="fa fa-hand-peace-o" aria-hidden="true"></i></a>
-  </section>
-  <!-- end of about section -->
-  <section class="subscribe">
-    <!--This will be a pop up subscribe form-->
-  </section>
-  <!-- section with images that link to pages -->
-  <section class="pages grid-spaceBetween">
-    {% for post in site.posts %}
-    <div class="col-3 centerText">
-      <<div class="blogpic" style="background-image:url('{{post.pagepic}}')"> </div>
-      <h2>{{post.title}}</h2>
-      <h3><a href="#travel">Travel</a></h3>
+  </div>
+</section>
+<!--End of images section -->
+{% include fancyline.html %}
+<!-- section with quote -->
+<section class="grid-center quotes">
+  <div class="col-6 thequote">
+  {% include fancyline.html %}
+    <h3>some sort of quote</h3>
+    {% include fancyline.html %}
+    <h3><a href="/quotes.html">more quotes page</a></h3>
+  </div>
+</section>
+{% include fancyline.html %}
+<!-- contact section -->
+<section id="contact">
+  <div class="grid">
+    <div class="col-4">
+      <h2>get in touch</h2>
+      <p>reason for why they should get in touch</p>
     </div>
-    {% endfor %}
-    <div class="col-3 centerText">
-      <h2>section title</h2>
-      <h3><a href="#food">Food</a></h3>
+    <div class="col-8">
+      <form class="grid" action ="https://formspree.io/your@email.com"method="POST">
+        <input class="col-8" type="text" name="name" placeholder="Your name">
+        <input class="col-8" type="email" name="_replyto" placeholder="Your email">
+        <textarea class="col-8" name="message" placeholder="Your message"></textarea>
+        <input class="col-8" type="submit" value="Send">
+      </form>
     </div>
-    <div class="col-3 centerText">
-      <h2>section title</h2>
-      <h3><a href="#other">Other</a></h3>
-    </div>
-    <div class="centerText">
-      <a href="#"><i class="fa fa-hand-peace-o" aria-hidden="true"></i></a>
-    </div>
-  </section>
-  <!--End of images section -->
-  <img src="" alt="fancy line" />
-  <!-- section with quote -->
-  <section class="grid-center quotes">
-    <div class="col-6 thequote">
-      <img src="" alt="fancy line" />
-      <h3>some sort of quote</h3>
-      <img src="" alt="fancy line" />
-      <h3><a href="#quotes">more quotes page</a></h3>
-    </div>
-  </section>
-  <img src="" alt="fancy line" />
-  <!-- contact section -->
-  <section id="contact">
-    <div class="grid">
-      <div class="col-4">
-        <h2>get in touch</h2>
-        <p>reason for why they should get in touch</p>
-      </div>
-        <div class="col-8">
-          <form class="grid" action ="https://formspree.io/your@email.com"method="POST">
-            <input class="col-8" type="text" name="name" placeholder="Your name">
-            <input class="col-8" type="email" name="_replyto" placeholder="Your email">
-            <textarea class="col-8" name="message" placeholder="Your message"></textarea>
-            <input class="col-8" type="submit" value="Send">
-          </form>
-        </div>
-      </div>
-  </section>
+  </div>
+</section>
