--- a/index.html
+++ b/index.html
@@ -15,20 +15,11 @@ title: Homepage
 <!-- section with images that link to pages -->
 <section class="pages grid-spaceBetween">
   {% for post in site.posts %}
-  <div class="col-3 centerText">
-    <div class="blogpic" style="background-image:url('{{post.pagepic}}')"> </div>
+  <div class="col-3 centerText style="background-image:url('{{post.pagepic}}')"">
     <h2>{{post.title}}</h2>
-    <h3><a href="#travel">Travel</a></h3>
+    <a href="{{post.href}}"><h3>{{<h3>post.linkname}}</h3></a>
   </div>
   {% endfor %}
-  <div class="col-3 centerText">
-    <h2>section title</h2>
-    <h3><a href="#food">Food</a></h3>
-  </div>
-  <div class="col-3 centerText">
-    <h2>section title</h2>
-    <h3><a href="#other">Other</a></h3>
-  </div>
   <div class="centerText">
     <a href="#"><i class="fa fa-hand-peace-o" aria-hidden="true"></i></a>
   </div>
