--- a/_posts/2017-08-23-Travel.html
+++ b/_posts/2017-08-23-Travel.html
@@ -1,10 +1,11 @@
 ---
 layout: posts
-pagepic: https://unsplash.it/200/300/?random
+pagepic: /Images/prettygateway.jpg
+banner: /Images/tampahlottest.jpg
 title: Travel
 subtitle: Adventures in Bali
-sidebarpic: https://unsplash.it/600/300/?random
-sidebaralt: Random pic
+sidebarpic: /Images/monkeytemple.jpg
+sidebaralt: Monkey sactuary temple
 ---
 
 <section>
