--- a/about.html
+++ b/about.html
@@ -1,8 +1,9 @@
 ---
 layout: default
 title: About
+banner: /Images/water.jpg
 ---
-<section class="grid">
+<section id="firstsection" class="grid">
   <div class="col-7">
     <h2>{{page.subtitle}}</h2>
     <p>
@@ -10,7 +11,7 @@ title: About
     </p>
   </div>
   <div class="col-3">
-    <img src="https://unsplash.it/600/300/?random" alt="My hover"/>
+    <img src="\Images\monkey2.jpg" alt="My hover"/>
   </div>
 </section>
 
