--- a/_posts/2017-08-23-Travel.html
+++ b/_posts/2017-08-23-Travel.html
@@ -6,6 +6,8 @@ title: Travel
 subtitle: Adventures in Bali
 sidebarpic: /Images/monkeytemple.jpg
 sidebaralt: Monkey sactuary temple
+categories:
+  - travel
 ---
 
 <section>
