--- a/_quotes/believe-you-can.html
+++ b/_quotes/believe-you-can.html
@@ -4,7 +4,7 @@ title: Believe you can
 quote: "Believe you can & you're halfway there"
 author: Theodore Roosevelt
 source: Pinterest/Triggers of thought
-pic: /Images/
+pic: /Images/Roosevelt.tif
 ---
 <section>
   <h2>{{page.title}}</h2>
