--- a/_quotes/your-strength.html
+++ b/_quotes/your-strength.html
@@ -2,7 +2,7 @@
 layout: posts
 title: Your Strength
 quote: "What makes you different or weird - that's your strength"
-author: Maryl Streep
+author: Meryl Streep
 source: adteachings.com
 ---
 <section>
