--- a/_posts/2017-08-24-Food.html
+++ b/_posts/2017-08-24-Food.html
@@ -6,9 +6,11 @@ title: Food
 subtitle: Good food in Bali
 sidebarpic: /Images/IMG_1928.jpg
 sidebaralt: Dragonfruit Gelato
+categories:
+  - food
 ---
 
-<section>
+<section id="firstsection">
 <p>
 Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
 </p>
