--- a/about.html
+++ b/about.html
@@ -14,6 +14,10 @@ banner: /Images/water.jpg
     <img src="\Images\monkey2.jpg" alt="My hover"/>
   </div>
 </section>
-
+<div class="centerText col-12">
+  <a href="#instagramwid"><i class="fa fa-angle-double-down" aria-hidden="true"></i></a>
+</div>
 {% include fancyline.html %}
+<section id="instagramwid">
 <!-- LightWidget WIDGET --><script src="//lightwidget.com/widgets/lightwidget.js"></script><iframe src="//lightwidget.com/widgets/cc1b9a5f430f50c08a1e3fc75275e1fd.html" scrolling="no" allowtransparency="true" class="lightwidget-widget" style="width: 100%; border: 0; overflow: hidden;"></iframe>
+</section>
