--- a/index.html
+++ b/index.html
@@ -5,24 +5,25 @@ banner: Images/sunset.jpg
 ---
 <!-- start of about section -->
 <section id="firstsection" class="about">
-  <h2>About...</h2>
-  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+  <h2>Welcome, fellow wanderer...</h2>
+  <p class="smalltextfix">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Lorem ipsum dolor sit amet, consectetur adipisicing elit. </p>
   <div class="centerText">
     <a href="#blog"><i class="fa fa-angle-double-down" aria-hidden="true"></i></a>
   </div>
 </section>
 <!-- end of about section -->
-<div class="subscribe offscreen">
+<!-- <div class="subscribe offscreen">
 <h2>subscribe</h2>
-</div>
+</div> -->
+{% include fancyline.html %}
 <!-- section with images that link to pages -->
 <section id="blog" class="pages grid-spaceAround">
-
+<h2 class="col-12">blogs</h2>
   {% for post in site.posts limit:3 %}
-  <a class="col-3" href="{{post.url}}">
-    <div class="centerText" style="background-image:url('{{post.pagepic}}')">
+  <a class="col-3_sm-12" href="{{post.url}}">
+    <div class="blogpic centerText flex-center" style="background-image:url('{{post.pagepic}}')">
       <h2>{{post.title}}</h2>
-      <h3>{{post.linkname}}</h3>
+      <!-- <h3>{{post.linkname}}</h3> -->
     </div>
   </a>
   {% endfor %}
@@ -35,9 +36,7 @@ banner: Images/sunset.jpg
 <!-- section with quote -->
 <section id="quotes" class="grid-center quotes">
   <div class="col-6 thequote">
-  <!-- {% include fancyline.html %} -->
-    <h3>some sort of quote</h3>
-    <!-- {% include fancyline.html %} -->
+    <h3 class="quoted">"Close your eyes. Fall in love. Stay there"<span>- RUMI</span></h3>
     <h3 class="rightText"><a class="button" href="/quotes.html">more</a></h3>
   </div>
 </section>
@@ -50,11 +49,14 @@ banner: Images/sunset.jpg
       <p>reason for why they should get in touch</p>
     </div>
     <div class="col-8">
-      <form class="grid" action ="https://formspree.io/your@email.com"method="POST">
-        <input class="col-8" type="text" name="name" placeholder="Your name">
-        <input class="col-8" type="email" name="_replyto" placeholder="Your email">
-        <textarea class="col-8" name="message" placeholder="Your message"></textarea>
-        <input class="inputdiamond" type="submit" value="Send">
+      <form class="grid" action ="https://formspree.io/amina_begum@hotmail.com"method="POST">
+        <input class="col-9" type="text" name="name" placeholder="Your name">
+        <input class="col-9" type="email" name="_replyto" placeholder="Your email">
+        <textarea class="col-9" name="message" placeholder="Your message"></textarea>
+        <div class="inputdiamond">
+          <input type="submit" value="Send">
+        </div>
+
       </form>
     </div>
   </div>
