--- a/about.html
+++ b/about.html
@@ -2,8 +2,9 @@
 layout: default
 title: About
 banner: /Images/water.jpg
+subtitle: HI5
 ---
-<section id="firstsection" class="grid">
+<section id="firstsection" class="grid-middle-spaceBetween me">
   <div class="col-7">
     <h2>{{page.subtitle}}</h2>
     <p>
@@ -13,10 +14,10 @@ banner: /Images/water.jpg
   <div class="col-3">
     <img src="\Images\monkey2.jpg" alt="My hover"/>
   </div>
+  <div class="centerText col-12">
+    <a href="#instagramwid"><i class="fa fa-angle-double-down" aria-hidden="true"></i></a>
+  </div>
 </section>
-<div class="centerText col-12">
-  <a href="#instagramwid"><i class="fa fa-angle-double-down" aria-hidden="true"></i></a>
-</div>
 {% include fancyline.html %}
 <section id="instagramwid">
 <!-- LightWidget WIDGET --><script src="//lightwidget.com/widgets/lightwidget.js"></script><iframe src="//lightwidget.com/widgets/cc1b9a5f430f50c08a1e3fc75275e1fd.html" scrolling="no" allowtransparency="true" class="lightwidget-widget" style="width: 100%; border: 0; overflow: hidden;"></iframe>
