--- a/index.html
+++ b/index.html
@@ -37,16 +37,16 @@ banner: Images/sunset.jpg
 <section id="quotes" class="grid-center quotes">
   <div class="col-6 thequote">
     <h3 class="quoted">"Close your eyes. Fall in love. Stay there"<span>- RUMI</span></h3>
-    <h3 class="rightText"><a class="button" href="/quotes.html">more</a></h3>
+    <a class="quotediamond" href="/quotes.html"><span>more</span></a>
   </div>
 </section>
 {% include fancyline.html %}
 <!-- contact section -->
 <section id="contact">
-  <div class="grid">
+  <div class="grid-middle">
     <div class="col-4">
-      <h2>get in touch</h2>
-      <p>reason for why they should get in touch</p>
+      <h2>Get in touch</h2>
+      <p>blah blah blah blah blaah hi5 blah blah blahh blah blah blah blah blaah hi5 blah blah blahh</p>
     </div>
     <div class="col-8">
       <form class="grid" action ="https://formspree.io/amina_begum@hotmail.com"method="POST">
