--- a/_quotes/quotes-nd-notes3.html
+++ b/_quotes/quotes-nd-notes3.html
@@ -4,6 +4,7 @@ title: Your example
 quote: "The world is changed by your example, not by your opiinion"
 author: Paulo Coelho
 source: Pinterest/Triggers of thought
+pic: /Images/paulocoelho.jpeg
 ---
 <section>
   <h2>{{page.title}}</h2>
