--- a/_quotes/your-strength.html
+++ b/_quotes/your-strength.html
@@ -4,6 +4,7 @@ title: Your Strength
 quote: "What makes you different or weird - that's your strength"
 author: Meryl Streep
 source: adteachings.com
+pic: /Images/Meryl.jpg
 ---
 <section>
   <h2>{{page.title}}</h2>
