--- a/blog.html
+++ b/blog.html
@@ -8,7 +8,8 @@ sidebarpic: /Images/monkeytemple.jpg
 sidebaralt: Monkey sactuary temple
 
 ---
-<section id="firstsection" class="grid">
+<section id="firstsection">
+  <div class ="border grid-middle-spaceAround">
   <div class="col-7">
     <h2>{{page.subtitle}}</h2>
     <p>
@@ -18,6 +19,7 @@ sidebaralt: Monkey sactuary temple
   </div>
   <div class="col-3">
     <img src="/Images/lalaguna2.jpg" alt="My hover"/>
+  </div>
   </div>
   <div class="centerText col-12">
     <a href="#blog"><i class="fa fa-angle-double-down" aria-hidden="true"></i></a>
