--- a/about.html
+++ b/about.html
@@ -4,15 +4,17 @@ title: About
 banner: /Images/water.jpg
 subtitle: HI5
 ---
-<section id="firstsection" class="grid-middle-spaceBetween me">
-  <div class="col-7">
+<section id="firstsection" class="me">
+  <div class ="border grid-middle-spaceBetween">
+  <div class="col-7_sm-12">
     <h2>{{page.subtitle}}</h2>
     <p>
       Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
     </p>
   </div>
-  <div class="col-3">
+  <div class="col-3_sm-12">
     <img src="\Images\monkey2.jpg" alt="My hover"/>
+  </div>
   </div>
   <div class="centerText col-12">
     <a href="#instagramwid"><i class="fa fa-angle-double-down" aria-hidden="true"></i></a>
