--- a/index.html
+++ b/index.html
@@ -5,8 +5,10 @@ banner: Images/sunset.jpg
 ---
 <!-- start of about section -->
 <section id="firstsection" class="about">
+  <div class="border">
   <h2>Welcome, fellow wanderer...</h2>
-  <p class="smalltextfix">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Lorem ipsum dolor sit amet, consectetur adipisicing elit. </p>
+  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Lorem ipsum dolor sit amet, consectetur adipisicing elit. </p>
+  </div>
   <div class="centerText">
     <a href="#blog"><i class="fa fa-angle-double-down" aria-hidden="true"></i></a>
   </div>
@@ -17,16 +19,19 @@ banner: Images/sunset.jpg
 </div> -->
 {% include fancyline.html %}
 <!-- section with images that link to pages -->
-<section id="blog" class="pages grid-spaceAround">
+
+<section id="blog" class="pages">
+<div class="border grid">
 <h2 class="col-12">blogs</h2>
   {% for post in site.posts limit:3 %}
-  <a class="col-3_sm-12" href="{{post.url}}">
+  <a class="col-4_sm-12" href="{{post.url}}">
     <div class="blogpic centerText flex-center" style="background-image:url('{{post.pagepic}}')">
       <h2>{{post.title}}</h2>
       <!-- <h3>{{post.linkname}}</h3> -->
     </div>
   </a>
   {% endfor %}
+  </div>
   <div class="centerText col-12">
     <a href="#quotes"><i class="fa fa-angle-double-down" aria-hidden="true"></i></a>
   </div>
@@ -34,25 +39,31 @@ banner: Images/sunset.jpg
 <!--End of images section -->
 {% include fancyline.html %}
 <!-- section with quote -->
-<section id="quotes" class="grid-center quotes">
-  <div class="col-6 thequote">
-    <h3 class="quoted">"Close your eyes. Fall in love. Stay there"<span>- RUMI</span></h3>
-    <a class="quotediamond" href="/quotes.html"><span>more</span></a>
+<section id="quotes">
+  <div class ="border grid-center quotes rel">
+    <div class="col-6 thequote">
+      <h3 class="quoted">"Close your eyes. Fall in love. Stay there"<span>- RUMI</span></h3>
+      <a class="quotediamond" href="/quotes.html"><span>more</span></a>
+    </div>
+  </div>
+  <div class="centerText col-12">
+    <a href="#contact"><i class="fa fa-angle-double-down" aria-hidden="true"></i></a>
   </div>
 </section>
 {% include fancyline.html %}
 <!-- contact section -->
 <section id="contact">
-  <div class="grid-middle">
-    <div class="col-4">
-      <h2>Get in touch</h2>
+  <div class= "border grid-middle">
+    <div class="col-4_sm-12">
+      <h2>
+        Get in touch</h2>
       <p>blah blah blah blah blaah hi5 blah blah blahh blah blah blah blah blaah hi5 blah blah blahh</p>
     </div>
-    <div class="col-8">
+    <div class="col-8_sm-12">
       <form class="grid" action ="https://formspree.io/amina_begum@hotmail.com"method="POST">
-        <input class="col-9" type="text" name="name" placeholder="Your name">
-        <input class="col-9" type="email" name="_replyto" placeholder="Your email">
-        <textarea class="col-9" name="message" placeholder="Your message"></textarea>
+        <input class="col-12" type="text" name="name" placeholder="Your name">
+        <input class="col-12" type="email" name="_replyto" placeholder="Your email">
+        <textarea class="col-12" name="message" placeholder="Your message"></textarea>
         <div class="inputdiamond">
           <input type="submit" value="Send">
         </div>
