--- a/quotes.html
+++ b/quotes.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-banner: /Images/iocquote.jpg
+banner: /Images/inspire.jpg
 ---
 {% include fancyline.html %}
 <section id="firstsection" class=" reverser">
