--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 ---
 layout: default
 title: Homepage
-banner: Images/sunset.jpg
+banner: /Images/sunset.JPG
 ---
 <!-- start of about section -->
 <section id="firstsection" class="about">
