--- a/_posts/2017-08-24-Food.html
+++ b/_posts/2017-08-24-Food.html
@@ -1,10 +1,10 @@
 ---
 layout: posts
-pagepic: /Images/IMG_1928.jpg
-banner: /Images/IMG_2422.jpg
+pagepic: /Images/IMG_1928.JPG
+banner: /Images/IMG_2422.JPG
 title: Food
 subtitle: Good food in Bali
-sidebarpic: /Images/IMG_1928.jpg
+sidebarpic: /Images/IMG_1928.JPG
 sidebaralt: Dragonfruit Gelato
 categories:
   - food
