--- a/_posts/2017-08-25-Activities.html
+++ b/_posts/2017-08-25-Activities.html
@@ -1,7 +1,7 @@
 ---
 layout: posts
-pagepic: /Images/lalaguna2.jpg
-banner: /Images/lalaguna.jpg
+pagepic: /Images/lalaguna2.JPG
+banner: /Images/lalaguna.JPG
 title: Activities
 subtitle: Explore Bali
 sidebarpic: /Images/ricepaddies.jpg
