--- a/about.html
+++ b/about.html
@@ -1,7 +1,7 @@
 ---
 layout: default
 title: About
-banner: /Images/water.jpg
+banner: /Images/water.JPG
 subtitle: HI5
 ---
 <section id="firstsection" class="me">
