--- a/blog.html
+++ b/blog.html
@@ -1,7 +1,7 @@
 ---
 layout: default
-pagepic: /Images/lalaguna2.jpg
-banner: /Images/IMG_2679.jpg
+pagepic: /Images/lalaguna2.JPG
+banner: /Images/IMG_2679.JPG
 title: Blog page
 subtitle: Adventures in Bali
 sidebarpic: /Images/monkeytemple.jpg
