--- a/_posts/2017-08-25-Activities.html
+++ b/_posts/2017-08-25-Activities.html
@@ -1,16 +1,16 @@
 ---
 layout: posts
-pagepic: /Images/lalaguna2.JPG
+pagepic: /Images/Adam_swing.JPG
 banner: /Images/lalaguna.JPG
 title: Activities
-subtitle: Explore Bali
-sidebarpic: /Images/ricepaddies.jpg
-sidebaralt: Rice paddies
+subtitle: Over the edge - A'dam lookout
+sidebarpic: /Images/Adam_swing.JPG
+sidebaralt: Swing
 
 ---
 
 <section id="firstsection">
 <p>
-Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+Next time you visit Amsterdam, make sure you head to Amsterdam's latest attraction - The A'dam lookout and whilst you're there, go on the 'Over the edge' swing - for 5 euros you will not be diappointed. Its definitely for the adrenaline junkies in your life and i loved it!
 </p>
 </section>
