--- a/_posts/2017-08-23-Travel.html
+++ b/_posts/2017-08-23-Travel.html
@@ -1,17 +1,17 @@
 ---
 layout: posts
-pagepic: /Images/prettygateway.jpg
+pagepic: /Images/lalaguna2.JPG
 banner: /Images/tampahlottest.jpg
 title: Travel
 subtitle: Adventures in Bali
-sidebarpic: /Images/monkeytemple.jpg
-sidebaralt: Monkey sactuary temple
+sidebarpic: /Images/ricepaddies.jpg
+sidebaralt: Tegalalang Rice Paddies
 categories:
   - travel
 ---
 
 <section id="firstsection">
   <p>
-Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+As part of one of the excursions during my bootcamp at IOC (Institute of Code), I had the opportunity to  visit the Tegalalang rice paddies and what a beautiful sight it was! You can walk through the rice fields and they have the cutest swing (You can find a pic of me on the swing on my insta profile) which alot of people queue up to use for those fab insta shots. Its a bloggers/photographers paradise!
   </p>
 </section>
