--- a/_posts/2017-08-24-Food.html
+++ b/_posts/2017-08-24-Food.html
@@ -1,17 +1,17 @@
 ---
 layout: posts
-pagepic: /Images/IMG_1928.JPG
-banner: /Images/IMG_2422.JPG
+pagepic: /Images/Elan_1.JPG
+banner: /Images/Elan_bike.JPG
 title: Food
-subtitle: Good food in Bali
-sidebarpic: /Images/IMG_1928.JPG
-sidebaralt: Dragonfruit Gelato
+subtitle: The cutest cafe in London!
+sidebarpic: /Images/Elan_2.JPG
+sidebaralt: Elan Brunch
 categories:
   - food
 ---
 
 <section id="firstsection">
 <p>
-Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+When in London and you want a cafe that satifies your cakey needs and floral obsession, check out the cutest cafe i have come across - Elan cafe. Easily accessible and open until midnight, its the perfect spot to grab a drink or have your girly catch ups!
 </p>
 </section>
