--- a/about.html
+++ b/about.html
@@ -2,18 +2,18 @@
 layout: default
 title: About
 banner: /Images/water.JPG
-subtitle: HI5
+subtitle: Hey!
 ---
 <section id="firstsection" class="me">
   <div class ="border grid-middle-spaceBetween">
   <div class="col-7_sm-12">
     <h2>{{page.subtitle}}</h2>
     <p>
-      Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+      So... a little about me. I'm a big believer of "Wonder often, wander always" because life is too short to stay in one place forever and exploring the world around you gives you some of lifes greatest treasures such as knowledge and experience not to mention connecting you to some fantastic souls. So, basically, i'm just a girl from a small town trying to find her way through life through exploring all that is out there including my favourite things which are Food, Travel and Activities! I've got some blogs on my adventures so feel free to read them :) Bye for now! xX
     </p>
   </div>
   <div class="col-3_sm-12">
-    <img src="\Images\monkey2.jpg" alt="My hover"/>
+    <img src="\Images\pergola.jpg" alt="My hover"/>
   </div>
   </div>
   <div class="centerText col-12">
