--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@ banner: /Images/sunset.JPG
 <section id="firstsection" class="about">
   <div class="border">
   <h2>Welcome, fellow wanderer...</h2>
-  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Lorem ipsum dolor sit amet, consectetur adipisicing elit. </p>
+  <p>FYI - I'm no blogger. I'm just someone who is trying to figure out what to do with her life and is exploring the world whilst doing just that! This site is just my way of documenting the things i do and see so if it helps you in anyway then happy days! Keep wandering and keep exploring! xX </p>
   </div>
   <div class="centerText">
     <a href="#blog"><i class="fa fa-angle-double-down" aria-hidden="true"></i></a>
@@ -42,7 +42,7 @@ banner: /Images/sunset.JPG
 <section id="quotes">
   <div class ="border grid-center quotes rel">
     <div class="col-6 thequote">
-      <h3 class="quoted">"Close your eyes. Fall in love. Stay there"<span>- RUMI</span></h3>
+      <h3 class="quoted">"What we have to remember is that we can still do anything. We can change our minds. We can start over. The notion that it's too late to do anything is comical. It's hilarious. We can't. We must not lose this sense of possibility because in the end, it's all we have"<span>- Marina Keegan </span></h3>
       <a class="quotediamond" href="/quotes.html"><span>more</span></a>
     </div>
   </div>
@@ -56,8 +56,8 @@ banner: /Images/sunset.JPG
   <div class= "border grid-middle">
     <div class="col-4_sm-12">
       <h2>
-        Get in touch</h2>
-      <p>blah blah blah blah blaah hi5 blah blah blahh blah blah blah blah blaah hi5 blah blah blahh</p>
+        Get in touch!</h2>
+      <p>Thanks for visiting! If you have any feedback or suggestions, just send me a message using this and i will get back to you :) </p>
     </div>
     <div class="col-8_sm-12">
       <form class="grid" action ="https://formspree.io/amina_begum@hotmail.com"method="POST">
