food pic width change

--- a/_posts/2017-08-24-Food.html
+++ b/_posts/2017-08-24-Food.html
@@ -1,10 +1,10 @@
 ---
 layout: posts
 pagepic: /Images/Elan_1.JPG
-banner: /Images/Elan_bike.JPG
+banner: /Images/IMG_7781.JPG
 title: Food
 subtitle: The cutest cafe in London!
-sidebarpic: /Images/Elan_2.JPG
+sidebarpic: /Images/IMG_7790.JPG
 sidebaralt: Elan Brunch
 categories:
   - food
