sidebar fix on food

--- a/_posts/2017-08-24-Food.html
+++ b/_posts/2017-08-24-Food.html
@@ -1,11 +1,14 @@
 ---
 layout: posts
 pagepic: /Images/Elan_1.JPG
-banner: /Images/IMG_7781.JPG
+banner: /Images/IMG_7783.JPG
 title: Food
 subtitle: The cutest cafe in London!
-sidebarpic: /Images/IMG_7790.JPG
-sidebaralt: Elan Brunch
+sidebar:
+  - pic: /Images/IMG_7790.JPG
+    alt: Elan Brunch
+  - pic: /Images/IMG_7790.JPG
+    alt: Elan Brunch
 categories:
   - food
 ---
